--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
     "build": "cross-env npm run clean && npm run build:server && npm run build:admin",
     "build:server": "cross-env npm run clean && tsc -p tsconfig.server.json",
-    "build:admin": "cross-env medusa-admin build",
+    "build:admin": "medusa-admin build --deployment",
     "build:digitalocean": "npm install --production=false && npm run build && npm ci",
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
