--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
-    "build": "cross-env npm run clean && npm run build:server && npm run build:admin",
+    "build": "cross-env medusa-admin build --deployment",
     "build:server": "cross-env npm run clean && tsc -p tsconfig.server.json",
     "build:admin": "medusa-admin build --deployment",
     "build:digitalocean": "npm install --production=false && npm run build && npm ci",
@@ -41,7 +41,10 @@
     "medusa-fulfillment-manual": "^1.1.38",
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.24",
-    "medusa-payment-stripe": "^6.0.5",
+    "medusa-payment-stripe": "^6.0.6",
+    "medusa-plugin-algolia": "^0.2.20",
+    "medusa-plugin-restock-notification": "^7.0.3",
+    "medusa-plugin-segment": "^1.3.7",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
