--- a/.github/workflows/development.release.yml
+++ b/.github/workflows/development.release.yml
@@ -11,11 +11,11 @@ on:
   workflow_dispatch:
 
 env:
-  DB_USERNAME = ${{ secrets.DB_USERNAME }}
-  DB_PASSWORD = ${{ secrets.DB_PASSWORD }}
-  DB_HOST = ${{ secrets.DB_HOST }}
-  DB_PORT = ${{ secrets.DB_PORT }}
-  DB_DATABASE = ${{ secrets.DB_DATABASE }}
+  DB_USERNAME: ${{ secrets.DB_USERNAME }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_PORT: ${{ secrets.DB_PORT }}
+  DB_DATABASE: ${{ secrets.DB_DATABASE }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
