--- a/.github/workflows/development.release.yml
+++ b/.github/workflows/development.release.yml
@@ -21,6 +21,7 @@ env:
 jobs:
   # This workflow contains a single job called "deploy"
   deploy:
+    environment: Preview
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     name: "[dev] Deployment"
