feat: adding documentation and .env.template updated

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,18 @@
-JWT_SECRET=something
-COOKIE_SECRET=something
-
-DATABASE_TYPE="postgres"
+JWT_SECRET=supersecret
+COOKIE_SECRET=supersecret
+DATABASE_TYPE=postgres
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/medusa
+MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
+STORE_CORS=http://localhost:8000
+ADMIN_CORS=http:\/\/localhost:3000
+MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=threshold-store-storefront
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=medusa-a6GI
 REDIS_URL=redis://localhost:6379
+STRIPE_API_KEY=sk_test_somesecretkey
+ALGOLIA_APP_ID=someid
+ALGOLIA_ADMIN_API_KEY=somekey
+SEGMENT_WRITE_KEY=somewritekey
