--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
+    "medusa-file-s3": "^1.4.1",
     "medusa-fulfillment-manual": "^1.1.38",
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.24",
@@ -46,6 +47,7 @@
     "medusa-plugin-algolia": "^0.2.20",
     "medusa-plugin-restock-notification": "^7.0.3",
     "medusa-plugin-segment": "^1.3.7",
+    "medusa-plugin-sendgrid": "^1.3.12",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
